added extra coordinates for APIs

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
             Please Select Latitude
             <select id="lat">
               <option value="42">42.00838</option>
+              <option value="51.509865">51.509865</option>
+              <option value="48.864716">48.864716</option>
             </select>
           </p>
           <p>
             Please Select Longitude
             <select id="lng">
               <option value="-2">-1.62303</option>
+              <option value="-0.118092">-0.118092</option>
+              <option value="2.349014">2.349014</option>
             </select>
           </p>
         </td>
@@ -48,12 +52,16 @@
             Please Select Latitude
             <select id="lat2">
               <option value="-8.783195">-8.783195</option>
+              <option value="-14.599413">-14.599413</option>
+              <option value="-33.137551">-33.137551</option>
             </select>
           </p>
           <p>
             Please Select Longitude
             <select id="lng2">
               <option value="-124.50852299999997">-124.50852299999997</option>
+              <option value="-28.673147">-28.673147</option>
+              <option value="81.826172">81.826172</option>
             </select>
           </p>
         </td>
