Made changes to input fields

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           </p>
           <p>
             Please Select Latitude
+            <input id="lat" type="number" value=""/> 
             <select id="lat">
               <option value="42">42.00838</option>
               <option value="51.509865">51.509865</option>
@@ -32,6 +33,7 @@
           </p>
           <p>
             Please Select Longitude
+            <input id="lng" type="number" value=""/> 
             <select id="lng">
               <option value="-2">-1.62303</option>
               <option value="-0.118092">-0.118092</option>
@@ -50,6 +52,7 @@
           </p>
           <p>
             Please Select Latitude
+            <input id="lat2" type="number" value=""/> 
             <select id="lat2">
               <option value="-8.783195">-8.783195</option>
               <option value="-14.599413">-14.599413</option>
@@ -58,6 +61,7 @@
           </p>
           <p>
             Please Select Longitude
+            <input id="lng2" type="number" value=""/> 
             <select id="lng2">
               <option value="-124.50852299999997">-124.50852299999997</option>
               <option value="-28.673147">-28.673147</option>
