--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <td><button id="btnRun">Run</button></td>
       </tr>
       <tr>
-        <td>Find Closest Ocean</td>
+        <td>Find Ocean</td>
         <td>
           <p>
-            This API will find the Closest Ocean to you by entering you latitude
-            and Longitude
+            This API will find an Ocean latitude
+            and Longitude 
           </p>
           <p>
             Please Select Latitude
@@ -57,7 +57,7 @@
           <p>Please type in a city</p>
           <input id="city" type="text" value="" />
         </td>
-        <td><button id="btnRun3">Submit</button></td>
+        <td><button id="btnRun3">Run</button></td>
       </tr>
     </table>
     <div id="divResults">
